--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Build with Next.js
         run: npm run build
+        env:
+          CUSTOM_DOMAIN: ${{ vars.CUSTOM_DOMAIN }}
 
       - name: Handle Custom Domain
         if: vars.CUSTOM_DOMAIN == 'true'
@@ -43,6 +45,10 @@ jobs:
           else
             echo "CNAME file not found in repository root. Please create it with your custom domain."
           fi
+      
+      - name: Create index.html redirect
+        run: |
+          echo '<!DOCTYPE html><html><head><meta http-equiv="refresh" content="0; url=/en"><script>window.location.replace("/en");</script></head><body>Redirecting...</body></html>' > out/index.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
