Add comprehensive Beneficiary Identification page with all 10 programs and anti-corruption measures

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,13 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
+.env.local
+
+# cache directories
+.cache
+*.cache
+node_modules/.cache
+.next/cache
 
 # vercel
 .vercel
