Fix: Enhanced webpack config and cache management for permanent MODULE_NOT_FOUND resolution

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "clean": "rm -rf .next node_modules/.cache",
-    "clean:all": "rm -rf .next node_modules/.cache node_modules && npm install"
+    "clean:all": "rm -rf .next node_modules/.cache node_modules && npm install",
+    "dev:clean": "npm run clean && npm run dev",
+    "reset": "rm -rf .next node_modules/.cache node_modules package-lock.json && npm install"
   },
   "dependencies": {
     "framer-motion": "^11.0.0",
