Update application form to submit to Google Drive instead of localStorage
- Updated application form to submit to Google Drive via Google Apps Script
- Removed automatic gallery addition logic - applications no longer appear automatically in gallery tabs
- Added Google Apps Script integration files and setup documentation
- Updated GitHub Actions workflow to include NEXT_PUBLIC_GOOGLE_SCRIPT_URL environment variable
- Updated success messages in English and Bengali translations
- Maintained existing design and user experience

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,11 +41,22 @@ jobs:
             echo "ℹ️  Using GitHub Pages subdomain mode"
           fi
 
+      - name: Debug Google Script URL variable
+        run: |
+          if [ -n "${{ vars.NEXT_PUBLIC_GOOGLE_SCRIPT_URL }}" ]; then
+            echo "✅ NEXT_PUBLIC_GOOGLE_SCRIPT_URL is set"
+            echo "URL length: $(echo -n '${{ vars.NEXT_PUBLIC_GOOGLE_SCRIPT_URL }}' | wc -c) characters"
+          else
+            echo "⚠️  NEXT_PUBLIC_GOOGLE_SCRIPT_URL is not set"
+            echo "⚠️  Application form submissions will not work in production"
+          fi
+
       - name: Build with Next.js
         run: npm run build
         env:
           NODE_ENV: production
           CUSTOM_DOMAIN: ${{ vars.CUSTOM_DOMAIN }}
+          NEXT_PUBLIC_GOOGLE_SCRIPT_URL: ${{ vars.NEXT_PUBLIC_GOOGLE_SCRIPT_URL }}
 
       - name: Handle Custom Domain
         if: vars.CUSTOM_DOMAIN == 'true'
